
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tv ;
struct timeval {int tv_sec; } ;
struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
typedef int socklen_t ;
typedef int fd_set ;
typedef int addr ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int F_GETFL ;
 int F_SETFL ;
 int O_NONBLOCK ;
 int bzero (struct timeval*,int) ;
 int connect (int,struct sockaddr*,int ) ;
 int fcntl (int,int ,int) ;
 int getpeername (int,struct sockaddr*,int*) ;
 scalar_t__ select (int,int *,int *,int ,struct timeval*) ;

int connect_timeout(int sfd, struct sockaddr *serv_addr,
 socklen_t addrlen, int timeout) {

 int res, slen, flags;
 struct timeval tv;
 struct sockaddr_in addr;
 fd_set rdf, wrf;

 fcntl(sfd, F_SETFL, O_NONBLOCK);

 res = connect(sfd, serv_addr, addrlen);

 if (res >= 0) return res;

 FD_ZERO(&rdf);
 FD_ZERO(&wrf);

 FD_SET(sfd, &rdf);
 FD_SET(sfd, &wrf);
 bzero(&tv, sizeof(tv));
 tv.tv_sec = timeout;

 if (select(sfd + 1, &rdf, &wrf, 0, &tv) <= 0)
  return -1;

 if (FD_ISSET(sfd, &wrf) || FD_ISSET(sfd, &rdf)) {
  slen = sizeof(addr);
  if (getpeername(sfd, (struct sockaddr*)&addr, &slen) == -1)
  return -1;

  flags = fcntl(sfd, F_GETFL, ((void*)0));
  fcntl(sfd, F_SETFL, flags & ~O_NONBLOCK);

  return 0;
 }

 return -1;
}
